--- a/index.html
+++ b/index.html
@@ -5,8 +5,35 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Library</title>
     <script type="text/javascript" src="library.js" defer></script>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    
+    <table>
+        <thead>
+            <caption>
+                Library Books
+            </caption>
+            <tr>
+                <th>Title</th>
+                <th>Author</th>
+                <th>Pages</th>
+                <th>Read?</th>
+                <th>ID</th>
+            </tr>
+            <tr>
+                <td>title here</td>
+                <td>author here</td>
+                <td>page count here</td>
+                <td>Unread here</td>
+                <td>ID here</td>
+            </tr>
+        </thead>
+        <tbody>
+
+        </tbody>
+        <tfoot>
+
+        </tfoot>
+    </table>
 </body>
 </html>
