displayBooks() and addNewBook button working

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Library</title>
     <script type="text/javascript" src="library.js" defer></script>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css" defer>
 </head>
 <body>
     <table>
@@ -28,5 +28,36 @@
 
         </tfoot>
     </table>
+    <p>
+        <dialog class="addNewBook">
+            <p>
+                <label for="bookTitle">Title:</label>
+                <br>
+                <input type="text" id="bookTitle" name="bookTitle">
+            </p>
+            <p>
+                <label for="bookAuthor">Author:</label>
+                <br>
+                <input type="text" id="bookAuthor" name="bookAuthor">
+            </p>
+            <p>
+                <label for="bookPages">Number of pages:</label>
+                <br>
+                <input type="number" id="bookPages" name="bookPages">
+            </p>
+            <p>
+                <input type="radio" id="bookRead" name="bookIsRead">
+                <label for="bookRead">Read</label>
+                <br>
+                <input type="radio" id="bookUnread" name="bookIsRead">
+                <label for="bookUnread">Unread</label>
+            </p>
+            <div>
+                <button class="confirmButton" value="default">Confirm</button>
+                <button class="cancelButton" value="cancel" formmethod="dialog">Cancel</button>
+            </div>
+        </dialog>
+        <button class="addButton">Add a new book!</button>
+    </p>
 </body>
 </html>
