Read/unread selection populates correctly when book added

--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
                 <input type="number" id="bookPages" name="bookPages">
             </p>
             <p>
-                <input type="radio" id="bookRead" name="bookIsRead">
+                <input type="radio" id="bookRead" name="bookIsRead" value="Read">
                 <label for="bookRead">Read</label>
                 <br>
-                <input type="radio" id="bookUnread" name="bookIsRead">
+                <input type="radio" id="bookUnread" name="bookIsRead" value="Unread" checked>
                 <label for="bookUnread">Unread</label>
             </p>
             <div>
