Additional form validation and styling

--- a/index.html
+++ b/index.html
@@ -32,24 +32,12 @@
         <p>
           <label for="bookTitle">Title:</label>
           <br />
-          <input
-            type="text"
-            id="bookTitle"
-            name="bookTitle"
-            minlength="1"
-            required
-          />
+          <input type="text" id="bookTitle" name="bookTitle" required />
         </p>
         <p>
           <label for="bookAuthor">Author:</label>
           <br />
-          <input
-            type="text"
-            id="bookAuthor"
-            name="bookAuthor"
-            minlength="1"
-            required
-          />
+          <input type="text" id="bookAuthor" name="bookAuthor" required />
         </p>
         <p>
           <label for="bookPages">Number of pages:</label>
